--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>Raff | Memory Game</title>
+    <title>Raff | Memory Game V2</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/♡ Anime pfp♡.jpeg" type="image/x-icon" />
